# vpm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml  refactor.md  upgrade.sh
.github/workflows/: ci.yml  publish.yml
docs/guide/: commands.md  execution-model.md  how-it-works.md  manifest-format.md  security.md  troubleshooting.md  writing-manifests.md
docs/plans/: 2026-04-22-vpmx-public-release.md
docs/specs/: 2026-04-22-vpmx-public-release-design.md
examples/: dev-environment.yaml  docker.yaml  lamp-stack.yaml  node-server.yaml  security-hardening.yaml
tests/: test_integration.py  test_manifest.py  test_models.py  test_resolver.py  test_scanner.py
vpm/: __init__.py  __main__.py  app.py  cli.py  completions.py  config.py  executor.py  lockfile.py  manifest.py  models.py  scanner.py  style.py  ui.py  vpm.py
