[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpm"
version = "1.0.0"
description = "Virtual Package Manager — robust script orchestration for VPS environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mohammed Alkebsi" }]
keywords = ["vps", "orchestration", "package-manager", "devops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/mohammedalkebsi/vpm"
Repository = "https://github.com/mohammedalkebsi/vpm"
Issues = "https://github.com/mohammedalkebsi/vpm/issues"

[project.scripts]
vpm = "vpm.cli:main"

[tool.setuptools.packages.find]
include = ["vpm*"]
