[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpmx"
version = "1.1.0"
description = "Virtual Package Manager — resumable, trackable script orchestration for VPS and local environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mohammed A. Al-Kebsi", email = "mohammed.k@mohammed-alkebsi.dev" }]
keywords = [
    "vps", "orchestration", "automation", "devops",
    "script-runner", "shell", "deployment", "server-setup",
    "crash-recovery", "interactive", "manifest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Nao-30/vpm"
Repository = "https://github.com/Nao-30/vpm"
Issues = "https://github.com/Nao-30/vpm/issues"
Changelog = "https://github.com/Nao-30/vpm/blob/main/CHANGELOG.md"

[project.scripts]
vpm = "vpm.cli:main"

[tool.setuptools.packages.find]
include = ["vpm*"]
